Update template and add hcar-28-openssh-github-keys

--- a/hcar-28/makefile
+++ b/hcar-28/makefile
@@ -2,7 +2,10 @@ hcar-28-all:
 	find hcar-28-*.tex ! -name hcar-28-template.tex -exec latexmk -xelatex {} +
 
 hcar-28-octohat:
-	latexmk -xelatex hcar-28-octohat.pdf
+	latexmk -xelatex hcar-28-octohat.tex
+
+hcar-28-openssh-github-keys:
+	latexmk -xelatex hcar-28-openssh-github-keys.tex
 
 clean:
 	latexmk -c -silent hcar-28-*.tex
